--- a/translations/warden.phrases.txt
+++ b/translations/warden.phrases.txt
@@ -7,24 +7,27 @@
 		"es"		"{1} Es ahora el AlcÃ¡ide de esta PrisiÃ³n."
 		"pt"		"{1} Agora, o diretor da prisão.."
 		"sv"		"{1} har blivit fängelsedirektör över detta fängelse."
+		"ru"		"{1} стал командиром."
 	}
 	
 	"warden_playerdead"
 	{
 		"#format"	""
-		"en"		"only alive players may become warden."
+		"en"		"Only alive players may become warden."
 		"es"		"SÃ³lo los jugadores vivos, pueden ser el AlcÃ¡ide."
 		"pt"		"Apenas os jogadores podem viver o diretor.."
 		"sv"		"Endast levande spelare kan bli fängelsedirektör."
+		"ru"		"Только живые могут стать командиром."
 	}
 	
 	"warden_ctsonly"
 	{
 		"#format"	""
-		"en"		"only Counter-Terrorists may become warden."
+		"en"		"Only Counter-Terrorists may become warden."
 		"es"		"SÃ³lo los Anti-Terroristas pueden ser el AlcÃ¡ide."
 		"pt"		"Apenas o diretor pode ser AntiTerrorista."
 		"sv"		"Endast Anti-Terrorister kan bli fängelsedirektör."
+		"ru"		"Только спецназ может стать командиром."
 	}
 	
 	"warden_exist"
@@ -34,6 +37,7 @@
 		"es"		"AlcÃ¡ide Actual: {1}"
 		"pt"		"Atual diretor: {1}"
 		"sv"		"nuvarande fängelsedirektör är: {1}"
+		"ru"		"Текущий командир: {1}"
 	}
 	
 	"warden_retire"
@@ -43,15 +47,17 @@
 		"es"		"{1} ha decidido jubilarse. Ahora toca elegir uno nuevo."
 		"pt"		"{1} o atual diretor, decidiu se aposentar. Agora começa a escolher um novo.."
 		"sv"		"{1} har bestämt sig för att avgå. Ni bör nu välja en ny."
+		"ru"		"{1} решил покинуть пост. Его место можно занять."
 	}
 	
 	"warden_notwarden"
 	{
 		"#format"	""
-		"en"		"you are not the warden and therefore may not retire."
+		"en"		"You are not the warden and therefore may not retire."
 		"es"		"No eres el AlcÃ¡ide, y no puedes jubilarte."
 		"pt"		"Você não é o diretor, e você não pode se aposentar.."
 		"sv"		"du är inte fängelsedirektören och kan därför inte avgå."
+		"ru"		"Вы не командир и, собственно, не можете покинуть его пост."
 	}
 	
 	"warden_dead"
@@ -61,15 +67,17 @@
 		"es"		"El AlcÃ¡ide ha muerto! Ahora toca elegir uno juevo."
 		"pt"		"O diretor está morto, agora começa a escolher um novo."
 		"sv"		"fängelsedirektören är död. Ni bör nu välja en ny."
+		"ru"		"Командир умер. Его место можно занять."
 	}
 	
 	"warden_disconnected"
 	{
 		"#format"	""
-		"en"		"the warden has disconnected. You may now choose a new one."
+		"en"		"The warden has disconnected. You may now choose a new one."
 		"es"		"El AlcÃ¡ide ha desertado. Ahora toca elegir uno nuevo."
 		"pt"		"O diretor deixou o jogo. Agora começa a escolher um novo."
 		"sv"		"fängelsedirektören har lämnat. Ni bör nu välja en ny."
+		"ru"		"Командир отключился. Его место можно занять."
 	}
 	
 	"warden_removed"
@@ -79,14 +87,16 @@
 		"es"		"Administrador: {1} ha prejubilado al AlcÃ¡ide: {2}"
 		"pt"		"O Administrador do: {1} o diretor se aposentou cedo: {2}"
 		"sv"		"Admin: {1} avskedade Fängelsedirektören: {2}"
+		"ru"		"Администратор: {1} уволил командира: {2}"
 	}
 	
 	"warden_noexist"
 	{
 		"#format"	""
-		"en"		"there was no warden to fire."
+		"en"		"There was no warden to fire."
 		"es"		"Actualmente no existe ningÃºn AlcÃ¡ide en la prisiÃ³n."
 		"pt"		"Atualmente não há carcereiro na prisão."
 		"sv"		"det fanns ingen fängelsedirektör att avskeda."
+		"ru"		"Некого увольнять."
 	}
 }
